# Online_Shop_Ecommerce

./: .gitignore  build.gradle  crud.py  database.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  schemas.py  settings.gradle
src/ecommerce/: main.py
src/ecommerce/controller/products/: products.py
src/ecommerce/controller/users/: auth_controller.py  deps.py
src/ecommerce/core/config/: settings.py
src/ecommerce/core/exceptions/: http.py
src/ecommerce/core/security/: jwt.py  password.py
src/ecommerce/domain/entities/products/: products.py
src/ecommerce/domain/entities/users/: role.py  user.py
src/ecommerce/domain/schemas/products/: products.py
src/ecommerce/domain/schemas/users/: auth.py
src/ecommerce/infrastructure/orm/: models.py
src/ecommerce/infrastructure/storage/: db.py
src/ecommerce/repository/products/: products_repo.py
src/ecommerce/repository/users/: user_repository.py
src/ecommerce/service/products/: products.py
src/ecommerce/service/users/: auth_service.py  mappers.py
src/main/java/com/example/ecommerce_lite/: EcommerceLiteApplication.java
src/main/java/com/example/ecommerce_lite/config/: SecurityConfig.java
src/main/java/com/example/ecommerce_lite/controller/: CategoryController.java  ProductController.java  ProductStockEntryController.java
src/main/java/com/example/ecommerce_lite/domain/: package-info.java
src/main/java/com/example/ecommerce_lite/dto/: CategoryDto.java  (+4 more)
src/main/resources/: application.properties
src/test/java/com/example/ecommerce_lite/: EcommerceLiteApplicationTests.java
(+28 files in other folders)
